--- a/kernel/arch/arm64/configs/orangepi_lite2_defconfig
+++ b/kernel/arch/arm64/configs/orangepi_lite2_defconfig
@@ -3045,7 +3045,10 @@ CONFIG_USB_UAS=y
 #
 # USB port drivers
 #
-# CONFIG_USB_SERIAL is not set
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_SIMPLE=y
 
 #
 # USB Miscellaneous drivers
