--- a/kernel/arch/arm64/configs/orangepi_lite2_defconfig
+++ b/kernel/arch/arm64/configs/orangepi_lite2_defconfig
@@ -1590,7 +1590,7 @@ CONFIG_XRADIO_ETF=y
 CONFIG_XRADIO_DEBUGFS=y
 # CONFIG_XR829_WLAN is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
-CONFIG_BCMDHD=m
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_PATH="/lib/firmware/fw_bcm43455c0_ag.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/ap6255/nvram.txt"
 CONFIG_BCMDHD_SDIO=y
@@ -1801,7 +1801,7 @@ CONFIG_SERIAL_SUNXI_CONSOLE=y
 # CONFIG_IPMI_HANDLER is not set
 CONFIG_HW_RANDOM=y
 #CONFIG_HW_RANDOM_IDQ6MC1=m
-CONFIG_HW_RANDOM_IDQ250C2=y
+CONFIG_HW_RANDOM_IDQ250C2=m
 # CONFIG_R3964 is not set
 
 #
@@ -2605,7 +2605,11 @@ CONFIG_VIDEO_GOOGLE_VP9_DECODER_SUNXI=y
 # GPU support for sunxi
 #
 CONFIG_SUNXI_GPU_TYPE="mali-t720"
-# CONFIG_DRM is not set
+CONFIG_VGA_ARB=y
+CONFIG_DRM_MALI_DISPLAY=y
+CONFIG_VGA_ARB_MAX_GPUS=16
+CONFIG_DRM_ARM=y
+CONFIG_DRM=y
 
 #
 # ACP (Audio CoProcessor) Configuration
@@ -2724,7 +2728,7 @@ CONFIG_SND_DRIVERS=y
 CONFIG_SND_HDA_PREALLOC_SIZE=64
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
-CONFIG_SND_USB_AUDIO=y
+CONFIG_SND_USB_AUDIO=m
 # CONFIG_SND_USB_UA101 is not set
 # CONFIG_SND_USB_CAIAQ is not set
 # CONFIG_SND_USB_6FIRE is not set
